--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
+      - run: npm cache clean --force
       - run: npm install
       - run: npm run build --if-present
       - name: Deploy to Heroku
