--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 14.x
       - run: npm cache clean --force
       - run: npm install
-      - run: npm run build --if-present
+      - run: npm run build
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
