--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
-      - run: npm cache clean --force
+      - run: npm run npm:clean
       - run: npm install
       - run: npm run build --prod
       - name: Deploy to Heroku
