--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "material-tailwind-dashboard-react",
-  "version": "1.1.0",
+  "name": "e-posyandu-web",
+  "version": "1.0.0",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/material-tailwind-dashboard-react/#/",
   "dependencies": {
     "@material-tailwind/react": "^0.3.4",
     "@react-google-maps/api": "^2.1.1",
