--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
-      - run: npm run npm:clean
       - run: npm install
-      - run: npm run build --prod
+      - run: npm run build
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
