--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           node-version: 14.x
       - run: npm install
-      - run: npm run build
+      - run: npm run build --if-present
+        env:
+          CI: false
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
